--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,9 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
-  employer         : "Red Brick University"
+  employer         : "The Chinese University of Hong Kong"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "kaisun@cuhk.edu.hk" 
 
   # Academic websites
   academia         : # URL
