--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   name             : "Kai Sun"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
+  location         : "Hong Kong"
   employer         : "The Chinese University of Hong Kong"
   uri              : # URL
   email            : "kaisun@cuhk.edu.hk" 
