--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ author:
   avatar           : "profile.png"
   name             : "Kai Sun"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Postdoctoral Associate"
   location         : "Hong Kong"
-  employer         : "The Chinese University of Hong Kong"
+  employer         : '<a href="https://www.grm.cuhk.edu.hk/en/">Dept. of Geography & Resource Management</a>, <br> <a href="https://www.cuhk.edu.hk/english/">The Chinese University of Hong Kong</a>'
   uri              : # URL
   email            : "kaisun@cuhk.edu.hk" 
 
