--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -25,6 +25,15 @@ main:
     
   - title: "CV"
     url: /cv/
+
+  - title: "Grants"
+    url: /grants/
+
+  - title: "Service"
+    url: /services/
+
+  - title: "Awards"
+    url: /awards/
     
   # - title: "CV"
   #   url: /cv-json/
